feat: update product stock
