# server/docs/swagger.json
@@ -1,10 +1,15 @@
 {
     "swagger": "2.0",
     "info": {
-        "contact": {}
+        "description": "商品微服务相关接口",
+        "title": "商品服务 API",
+        "contact": {},
+        "version": "1.0"
     },
+    "host": "localhost:8080",
+    "basePath": "/product-ms/v1",
     "paths": {
-        "/add": {
+        "/merchant/add": {
             "post": {
                 "description": "新增一个商品",
                 "consumes": [
@@ -44,7 +49,7 @@
                 }
             }
         },
-        "/product/{id}": {
+        "/merchant/product/{id}": {
             "get": {
                 "description": "根据商品ID获取商品详细信息",
                 "consumes": [
@@ -106,7 +111,7 @@
                 }
             }
         },
-        "/publish": {
+        "/merchant/publish": {
             "post": {
                 "description": "将商品状态更改为上架状态",
                 "consumes": [
@@ -158,7 +163,7 @@
                 }
             }
         },
-        "/unpublish": {
+        "/merchant/unpublish": {
             "post": {
                 "description": "将商品状态更改为下架状态",
                 "consumes": [
@@ -203,6 +208,46 @@
                     },
                     "500": {
                         "description": "服务器内部错误",
+                        "schema": {
+                            "$ref": "#/definitions/data.BaseResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/merchant/updateStock": {
+            "post": {
+                "description": "只有当商品处于下架状态时，才能更改商品库存",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "商品"
+                ],
+                "summary": "商家端更新商品库存",
+                "parameters": [
+                    {
+                        "description": "更新商品库存请求",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/types.UpdateProductStockRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "更新成功",
+                        "schema": {
+                            "$ref": "#/definitions/data.BaseResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "请求参数错误",
                         "schema": {
                             "$ref": "#/definitions/data.BaseResponse"
                         }
@@ -270,6 +315,17 @@
             "type": "object",
             "properties": {
                 "id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "types.UpdateProductStockRequest": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "stock": {
                     "type": "integer"
                 }
             }
